--- a/imports.less
+++ b/imports.less
@@ -1,2 +1,3 @@
 @import "bower_components/bootstrap/less/bootstrap.less";
 @import "bower_components/font-awesome/less/font-awesome.less";
+@import "less/loginstyle.less";
