--- a/views/Menu.html
+++ b/views/Menu.html
@@ -1,13 +1,24 @@
 <nav class="navbar navbar-inverse" ng-controller="MenuController">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="#{{::paths.home}}">VideoBabel</a>
-		</div>
-		<ul class="nav navbar-nav">
-			<li><a href="#{{::paths.home}}">Home</a></li>
-			<li><a href="#{{::paths.movies}}">All Movies</a></li>
-			<li><a href="#{{::paths.uploadMovie}}">Upload Movie</a></li>
-			<li><a href="#{{::paths.movies}}">Your Store Movies</a></li>
-		</ul>
-	</div>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#{{::paths.home}}">VideoBabel</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li ng-class="getClassForItem(paths.home)">
+                <a href="#{{::paths.home}}">Home</a>
+            </li>
+            <li ng-class="getClassForItem(paths.movies)">
+                <a href="#{{::paths.movies}}">All Movies</a>
+            </li>
+            <li ng-class="getClassForItem(paths.uploadMovie)">
+                <a href="#{{::paths.uploadMovie}}">Upload Movie</a>
+            </li>
+            <li ng-class="getClassForItem(paths.movies)">
+                <a href="#{{::paths.rentMovies}}">Your Rent Movies</a>
+            </li>
+             <li ng-class="getClassForItem(paths.movies)">
+                <a href="#{{::paths.contribMovies}}">Your Contributions</a>
+            </li>
+        </ul>
+    </div>
 </nav>
