--- a/views/MoviesContribList.html
+++ b/views/MoviesContribList.html
@@ -1,3 +1,3 @@
-<div ng-controller="MoviesListController">
+<div ng-controller="MoviesContribListController">
     <media-item-list items="model"></media-item-list>
 </div>
