--- a/views/movieItemList.html
+++ b/views/movieItemList.html
@@ -3,32 +3,27 @@
         <tr>
             <th>Poster</th>
             <th>Title</th>
-            <th>Year</th>
-            <th>Rating</th>
+            <th>Last Rent</th>
+            <th>Upload by</th>
             <th>
-                <input class="form-control" type="search" ng-model="query.title" placeholder="Search...">
+               <!-- <input class="form-control" type="search" ng-model="query.title" placeholder="Search...">-->
             </th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="item in model | filter:query">
+        <tr ng-repeat="item in model">
             <td>
-                <img ng-src="{{::item.poster_url}}" alt="{{::itme.title}}'s poster" title="{{::item.title}}" width="90px">
+                <img ng-src="{{::item.image_url}}" alt="{{::item.title}}'s poster" title="{{::item.title}}" width="90px">
             </td>
             <td>
                 {{::item.title}}
             </td>
             <td>
-                {{::item.release_date | date:"dd/MM/yyyy"}}
-                <br> ({{::item.release_date | ago}})
+                {{::item.rent_date | date:"dd/MM/yyyy"}}
+                <br> ({{::item.rent_date}})
             </td>
             <td>
-                {{::item.rating}}&nbsp; ({{::item.rating | schoolrating}})
-            </td>
-            <td>
-                <a href="#{{::getDetailUrl({stuff:item})}}" class="btn btn-default">
-                        View
-                    </a>
+                {{::item.owner}}
             </td>
         </tr>
     </tbody>
