--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,25 @@
 <div ng-controller="LoginController">
-    <div class="col-xs-2">Usuario:</div>
-    <div calss="col-xs-10">
-        <input type="text" ng-model="model.user">
-        <span> Hello {{user }}</span>
-    </div>
-    <div class="col-xs-2">Password:</div>
-    <div calss="col-xs-10">
-        <input type="text" ng-model="model.pass">
-    </div>
-    <div class="col-xs-12">
-        <button ng-click="model.user=''; model.pass=''">Reset</button>
-        <button ng-click="next()">Continue</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <div class="alert alert-info text-center">
+                    <strong>Sign in to continue to VideoClub</strong>
+                </div>
+                <div class="account-wall">
+                    <img class="profile-img" src="http://cgc.stellamariscollege.org/logg.jpg" alt="" width="120" height="120">
+                    <form class="form-signin">
+                        <input type="text" ng-model="model.user" class="form-control" placeholder="Username" required autofocus>
+                        <input type="password" ng-model="model.pass" class="form-control" placeholder="Password" required>
+                        <button class="btn btn-lg btn-primary btn-block" ng-click="next()" type="submit">
+                            Sign in</button>
+                        <label class="checkbox pull-left">
+                            <input type="checkbox" value="remember-me"> Remember me
+                        </label>
+                        <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+                    </form>
+                </div>
+                <p ng-click="model.user=''; model.pass=''" class="text-center new-account">Reset</p>
+            </div>
+        </div>
     </div>
 </div>
