Solucionado par de errores, reset y logout

--- a/views/Menu.html
+++ b/views/Menu.html
@@ -20,7 +20,7 @@
                 <a href="#{{::paths.contribMovies}}">Your Contributions</a>
             </li>
             <li ng-click="logout()">
-                <a href="#{{::paths.contribMovies}}">Your Contributions</a>
+                <a href="#{{::paths.contribMovies}}">Logout</a>
             </li>
         </ul>
     </div>
