--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
                         <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
                     </form>
                 </div>
-                <p ng-click="model.user=''; model.pass=''" class="text-center new-account">Reset</p>
+                <a ng-click="model.user=''; model.pass=''" class="text-center new-account">Reset</a>
             </div>
         </div>
     </div>
