cosillas directives. Terminar en casa

--- a/views/Menu.html
+++ b/views/Menu.html
@@ -13,10 +13,10 @@
             <li ng-class="getClassForItem(paths.uploadMovie)">
                 <a href="#{{::paths.uploadMovie}}">Upload Movie</a>
             </li>
-            <li ng-class="getClassForItem(paths.movies)">
+            <li ng-class="getClassForItem(paths.rentMovies)">
                 <a href="#{{::paths.rentMovies}}">Your Rent Movies</a>
             </li>
-             <li ng-class="getClassForItem(paths.movies)">
+             <li ng-class="getClassForItem(paths.contribMovies)">
                 <a href="#{{::paths.contribMovies}}">Your Contributions</a>
             </li>
             <li ng-click="logout()">
