--- a/views/movieItemList.html
+++ b/views/movieItemList.html
@@ -25,6 +25,7 @@
             <td>
                 {{::item.owner}}
             </td>
+            <td><button ng-if=""></button></td>            
         </tr>
     </tbody>
 </table>
