--- a/views/MoviesList.html
+++ b/views/MoviesList.html
@@ -1,3 +1,3 @@
 <div ng-controller="MoviesListController">
-    <media-item-list items="model"></media-item-list>
+    <media-item-list items="model" type = "type"></media-item-list>
 </div>
