--- a/views/movieItemList.html
+++ b/views/movieItemList.html
@@ -1,31 +1,43 @@
 <table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Poster</th>
-            <th>Title</th>
-            <th>Last Rent</th>
-            <th>Upload by</th>
-            <th>
-               <!-- <input class="form-control" type="search" ng-model="query.title" placeholder="Search...">-->
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="item in model">
-            <td>
-                <img ng-src="{{::item.image_url}}" alt="{{::item.title}}'s poster" title="{{::item.title}}" width="90px">
-            </td>
-            <td>
-                {{::item.title}}
-            </td>
-            <td>
-                {{::item.rent_date | date:"dd/MM/yyyy"}}
-                <br> ({{::item.rent_date}})
-            </td>
-            <td>
-                {{::item.owner}}
-            </td>
-            <td><button ng-if=""></button></td>            
-        </tr>
-    </tbody>
+	<thead>
+		<tr>
+			<th>Poster</th>
+			<th>Title</th>
+			<th>Last Rent</th>
+			<th>Upload by</th>
+			<th>
+				<!-- <input class="form-control" type="search" ng-model="query.title" placeholder="Search...">-->
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="item in model">
+			<td>
+				<img ng-src="{{::item.image_url}}" alt="{{::item.title}}'s poster" title="{{::item.title}}" width="90px">
+			</td>
+			<td>
+				{{::item.title}}
+			</td>
+			<td>
+				{{::item.rent_date | date:"dd/MM/yyyy"}}
+				<br> ({{::item.rent_date}})
+			</td>
+			<td>
+				{{::item.owner}}
+			</td>
+			<td>
+				<button class="btn btn-primary" ng-if="type == 'all'">
+					Rent
+				</button>
+			</td>
+			<td>
+				<button class="btn btn-primary" ng-if="type == 'rent'">
+					watch now
+				</button>
+			</td>
+
+
+		</tr>
+	</tbody>
+
 </table>
