--- a/views/movieItemList.html
+++ b/views/movieItemList.html
@@ -5,6 +5,7 @@
 			<th>Title</th>
 			<th>Last Rent</th>
 			<th>Upload by</th>
+			<th ng-if="type == 'contrib'">Upload date</th>
 			<th>
 				<!-- <input class="form-control" type="search" ng-model="query.title" placeholder="Search...">-->
 			</th>
@@ -18,12 +19,17 @@
 			<td>
 				{{::item.title}}
 			</td>
-			<td>
+			<td ng-if="item.rent_date != ''">
 				{{::item.rent_date | date:"dd/MM/yyyy"}}
-				<br> ({{::item.rent_date}})
+			</td>
+			<td ng-if="item.rent_date == ''"> 
+			                -
 			</td>
 			<td>
 				{{::item.owner}}
+			</td>
+			<td ng-if="type == 'contrib'">
+				{{::item.created_date}}
 			</td>
 			<td>
 				<button class="btn btn-primary" ng-if="type == 'all'">
@@ -35,6 +41,7 @@
 					watch now
 				</button>
 			</td>
+			
 
 
 		</tr>
