No esta creado el path movieDetail. Con el merge siguiente esto se resolverá. Las peliculas alquiladas se pueden desalquilar pulsando el boton "watch now" de manera que también redirige al pagina de detalle y visualización de la pelicula.

--- a/views/movieItemList.html
+++ b/views/movieItemList.html
@@ -32,12 +32,12 @@
 				{{::item.created_date}}
 			</td>
 			<td>
-				<button class="btn btn-primary" ng-if="type == 'all'" ng-click="rentMovie(item)">
+				<button class="btn btn-primary" ng-if="type == 'all'" ng-click="rent(item)">
 					Rent
 				</button>
 			</td>
 			<td>
-				<button class="btn btn-primary" ng-if="type == 'rent'">
+				<button class="btn btn-primary" ng-if="type == 'rent'" ng-click="rent(item)">
 					watch now
 				</button>
 			</td>
