Vista de detalle de pelicula acabada, por fin xD

--- a/views/Menu.html
+++ b/views/Menu.html
@@ -24,7 +24,7 @@
                         <p class="nav navbar-brand">Usuario: {{model.user}}</p>
                     </div>
                     <div class="col-xs-4">
-                        <button "btn btn-default" ng-click="logout()">Logout</button>
+                        <p class="nav navbar-brand" ng-click="logout()">Logout</p>
                     </div>
                 </div>
             </div>
